# openmanus

./: .gitignore  .pdm-python  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
config/: config.toml
openmanus-pro/openmanus-pro/: app.py
