[project]
name = "openmanus"
version = "0.1.0"
description = "AI Research Assistant powered by Groq"
requires-python = ">=3.9,<3.13"

dependencies = [
    "groq",
    "streamlit",
    "python-dotenv",
    "pillow",
    "playwright",
    "toml",
    "aiofiles",
    "loguru",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false